--- a/email.html
+++ b/email.html
@@ -11,7 +11,7 @@
             <thead>
                 <tr>
                     <th style="padding-top: 32px; padding-bottom: 32px;">
-                        <img src="/imagens/EBAC Banking.png" alt="" srcset="">
+                        <img src="https://email-test-git-main-williampeixinhos-projects.vercel.app/imagens/EBAC%20Banking.png" alt="" srcset="">
                     </th>
                 </tr>
             </thead>
@@ -52,9 +52,9 @@
                 </tr>
                 <tr>
                     <td align="center" style="padding-top: 128px;">
-                        <a href=""><img src="./imagens/instagram 1.png" alt=""></a>
-                        <a href=""><img src="./imagens/facebook (1) 1.png" alt=""></a>
-                        <a href=""><img src="./imagens/twitter 1.png" alt=""></a>
+                        <a href="https://www.instagram.com"><img src="https://email-test-git-main-williampeixinhos-projects.vercel.app/imagens/instagram%201.png" alt=""></a>
+                        <a href="https://www.facebook.com"><img src="https://email-test-git-main-williampeixinhos-projects.vercel.app/imagens/facebook%20(1)%201.png" alt=""></a>
+                        <a href="https://www.twitter.com"><img src="./imagens/twitter 1.png" alt=""></a>
                     </td>
                 </tr>
             </tbody>
