--- a/email.html
+++ b/email.html
@@ -54,7 +54,7 @@
                     <td align="center" style="padding-top: 128px;">
                         <a href="https://www.instagram.com"><img src="https://email-test-git-main-williampeixinhos-projects.vercel.app/imagens/instagram%201.png" alt=""></a>
                         <a href="https://www.facebook.com"><img src="https://email-test-git-main-williampeixinhos-projects.vercel.app/imagens/facebook%20(1)%201.png" alt=""></a>
-                        <a href="https://www.twitter.com"><img src="./imagens/twitter 1.png" alt=""></a>
+                        <a href="https://www.twitter.com"><img src="https://email-test-git-main-williampeixinhos-projects.vercel.app/imagens/twitter 1.png" alt=""></a>
                     </td>
                 </tr>
             </tbody>
